versioned_docs/version-13.x/02.complete/00.setup/03.publisher/01.config.md
---
title: Publisher config
---
# uSync.Publisher Config

for uSync 9 and 10 the majority of the uSync publisher config now lives in the Database, and can be synced between your servers via the dashboard.

## AppId/AppKey

For your servers to communicate securely they will need to have a shared AppId and AppKey, these values have to be placed in the `appsettings.json` file on each server. 

:::tip
When you first open up the uSync.Publisher dashboard, uSync will prompt you to create an AppId and AppKey. you can cut and paste the JSON from that dialog box directly into your appsettings.json file.
:::

```json
{
  "uSync": {
    "Publisher": {
      "Settings": {
        "IncomingEnabled": true,
        "AppId": "****************",
        "AppKey": "****************"
      }
    }
  }
}
```
## appsettings.json config File

While most settings are now stored in the DB, there are a few settings you can control per server via the `appsettings.json` file:

```json
{
  "uSync": {
    "Publisher": {
      "Settings": {
        "IncomingEnabled": true,
        "OutgoingEnabled": true, 
        "AppId": "****************",
        "AppKey": "****************",
        "Publisher": "Realtime",
        "CleanReports": true,
        "PageSize": 50,
        "MediaPageSize": 5,
        "AdditionalFolders": "",
        "SystemFolders" : "",
        "SystemExclusions" : "",
        "FileReplacements" : "",
        "IncludeHost" : true,
        "ForstHostOption" : false,
        "UserAgentString" : "",
        "RequestHeaders" : "",
      }
    }
  }
}
```

Property | Value | Note
---------|-------|-------
incomingEnabled | true/false | Turns this server on/off for incoming requests. With this setting off the server cannot be published to or pulled from.
outgoingEnabled | true/false | Enables/disables this server sending publish requests. With this setting off, you will not see the publish/pull options in Umbraco.
AppId | string | Application ID used alongside AppKey to sign and check any communication between instances.
AppKey | string | Key used to sign communications.
Publisher | string | The type of Publisher to use when pushing and pulling content.
CleanReports | true/false | Turns on/off the trimming of folders after the report stage (this makes imports quicker as less is rechecked).
PageSize | 50 | How many items are in a 'page' of data sent between servers
MediaPageSize | 5 | How many media items are in a 'page' of data sent between servers, as media is compressed and sent in pages between servers changing this value will change the size of those compressed files.
AdditionalFolders | ~/Views, ~/wwwroot/css, ~/wwwroot/scripts | List of folders to include.
SystemFolders |  | What folders are considered system folders (e.g bin).
SystemExclusions | ~/bin,~/app_plugins | Things to exclude from system.
FileReplacements |  | Things that might be replaced inside a file. 
IncludeHost | true/false | If the host name is included as part of the signature when signing requests between sites. Turning this value off may make it possible to replay requests on another server. 
ForceHostOption | true/false | If true Usync will require a host name as part of the sync.
UserAgentString | | Set the user agent string.
RequestHeaders  | | Add your own custom header key pairs that will get added to every request.